@@ -1,5 +1,7 @@
 2007/??/?? 1.4.1:
  - Added API for getting highest supported IServerPluginCallbacks interface version.
+ - The client version of the "meta" command should now work on games that use
+   ServerGameClients004 and beyond.
 
 2007/04/05 1.4.0:
  - Added API functions for retrieving User Message info without potentially crashing.
